fix contrast issue

--- a/src/routes/app.css
+++ b/src/routes/app.css
@@ -7,7 +7,7 @@
 }
 
 :root {
-	--error-color: #f12c2c;
+	--error-color: #db3030;
 	--success-color: #22e222;
 	--button-color: royalblue;
 	--bg-color: #101013;
